test/error/ast/CallNotProc.mod
MODULE CallNotProc;
VAR i: INTEGER;
BEGIN
  i();
END CallNotProc.
